@@ -12,6 +12,7 @@
 	* remove deprecated 'q' param for expm
 	* allow pauliX without arg for cyclic groups
 	* circuits functions handle non-qubit case
+	* 'group' module
 
 === qitensor-0.9 (Dan Stahlke, 2011-04-17) ===
 	* random_isometry
